--- a/flexbrasil/_exemplos/load.html
+++ b/flexbrasil/_exemplos/load.html
@@ -1,51 +1,37 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>load</title>
-<script language="javascript">AC_FL_RunContent = 0;</script>
-<script src="AC_RunActiveContent.js" language="javascript"></script>
-</head>
-<body bgcolor="#cccccc">
-<!--url's used in the movie-->
-<!--text used in the movie-->
-<!--
-<p align="left"></p>
--->
-<!-- saved from url=(0013)about:internet -->
-<script language="javascript">
-	if (AC_FL_RunContent == 0) {
-		alert("This page requires AC_RunActiveContent.js.");
-	} else {
-		AC_FL_RunContent(
-			'codebase', 'http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0',
-			'width', '550',
-			'height', '400',
-			'src', 'load',
-			'quality', 'high',
-			'pluginspage', 'http://www.macromedia.com/go/getflashplayer',
-			'align', 'middle',
-			'play', 'true',
-			'loop', 'true',
-			'scale', 'showall',
-			'wmode', 'window',
-			'devicefont', 'false',
-			'id', 'load',
-			'bgcolor', '#cccccc',
-			'name', 'load',
-			'menu', 'true',
-			'allowFullScreen', 'false',
-			'allowScriptAccess','sameDomain',
-			'movie', 'load',
-			'salign', ''
-			); //end AC code
-	}
-</script>
-<noscript>
-	<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="550" height="400" id="load" align="middle">
-	<param name="allowScriptAccess" value="sameDomain" />
-	<param name="allowFullScreen" value="false" />
-	<param name="movie" value="load.swf" /><param name="quality" value="high" /><param name="bgcolor" value="#cccccc" />	<embed src="load.swf" quality="high" bgcolor="#cccccc" width="550" height="400" name="load" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
-	</object>
-</noscript>
-</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <title>Título do Seu Site</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2/swfobject.js"></script>
+    <script type="text/javascript">
+      var flashvars = {}
+      var params = {wmode:"transparent"}
+      var attributes = {}
+      swfobject.embedSWF("load.swf",
+               "flash",
+               "100%", "100%",
+               "9.0.0",
+               "http://libs.appspot.com/expressInstall.swf",
+               flashvars, params, attributes);
+    </script>
+    <style>
+      html, body, #flash {
+        margin: 0;
+        padding: 0;
+        border: none;
+        height: 100%;
+        width: 100%;
+        overflow: auto;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="flash">
+      <a href="http://www.adobe.com/go/getflashplayer">
+        <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif"
+           alt="Instalar Adobe Flash player" />
+      </a>
+    </div>
+  </body>
 </html>
