--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
     <h1><a href="http://github.com/neves/flexbrasil">flexbrasil</a>
       <span class="small">by <a href="http://github.com/neves">neves</a></span></h1>
 
+		<div id="nav">
+			<ul>
+				<li><a href="neves.github.com_flexbrasil/flexbrasil_explorer.htm">flexbrasil_explorer</a></li>
+			</ul>
+		</div>
+			
     <div class="description">
       AS3 Helpers para flash e flex
     </div>
