--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		<div id="nav">
 			<ul>
-				<li><a href="neves.github.com_flexbrasil/flexbrasil_explorer.htm">flexbrasil_explorer</a></li>
+				<li><a href="pages/flexbrasil_explorer.htm">flexbrasil_explorer</a></li>
 			</ul>
 		</div>
 			
